<resources>
    <!--main-->
    <string name="app_name">SNGBanking</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="botton_login">LOGIN</string>
    <string name="signup">No Account? Sign up</string>

    <!--Account-->
    <string name="botton_deposit">Deposit</string>
    <string name="botton_withdraw">Withdraw</string>
    <string name="botton_balance">Balance</string>
    <string name="botton_logout">LOGOUT</string>
    <string name="firstname">John</string>
    <string name="lastname">Wick</string>
    <string name="fullName">John Wick</string>
    <string name="account_number">012-345-6789</string>
    <string name="balance">1000.00</string>
    <string name="history">History</string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
    </string-array>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_manu2">Manu2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="deposit" />
    <string name="cencle">CANCLE</string>
    <string name="confirm">COMFIRM</string>

</resources>
